--- a/client/src/components/CountryCard.css
+++ b/client/src/components/CountryCard.css
@@ -1,7 +1,37 @@
 .country-card__container {
     margin: 10px;
-    box-shadow: 2px 4px;
+    /* box-shadow: 2px 4px; */
+    position:relative;
 }
+.country-card__container:hover .country-card__title{
+    color: white;
+    /* -webkit-text-stroke: 2px black; */
+}
+
+.country-card__container::before {
+    transform: scaleX(0);
+    transform-origin: bottom right;
+}
+.country-card__container:hover::before {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+.country-card__container::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    inset: 0 0 0 0;
+    background-color: #00B4FF;
+    /* background: hsl(200 100% 80%); */
+    z-index: -1;
+    transition: transform .3s ease;
+}
+
+/* .country-card__container:hover {
+    animation: ease-in-out;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+} */
 
 .country-card__content {
     display: flex;
@@ -11,7 +41,7 @@
     width: 261.25px;
     height: 250px;
     /* height: 365px; */
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    /* border: 1px solid rgba(0, 0, 0, 0.15); */
     overflow: hidden;
   }
   
@@ -32,12 +62,7 @@
     min-height: 100%;
   }
   
-  .country-card__text > h2{
-    color: black;
-    padding: 7.5px ;
-    font-family: Montserrat;
-  }
-  
   .country-card__title {
-    /* margin-bottom: 10px; */
-  }
+    color: #FFA500;
+    padding: 7.5px ;  
+}
