--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -3,7 +3,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  background: brown;
+  background: #ba3b0a;
   height: auto;
   max-width: 100%;
   padding: 40px;
