--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,3 +1,19 @@
+.box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: white;
+    border: 2px solid #000;
+    box-shadow: 0 0 10px;
+    padding: 20px;
+}
+
+#modal-modal-title {
+    text-align: center;
+}
+
 .home-container {
   /* max-width: 1350px; */
   max-width: 85vw;
