refactor: update component file structure and fix babel dependency
- Fix babel dependency
- Refactor by removing unnecessary lines and spaces from files
- Refactor by updating directory structure so that all files related to components are located with the component file

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Bookerly";
-  src: url("../fonts/Bookerly-BoldItalic.woff2") format("woff2"),
-    url("../fonts/Bookerly-BoldItalic.woff") format("woff");
+  src: url("../../fonts/Bookerly-BoldItalic.woff2") format("woff2"),
+    url("../../fonts/Bookerly-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
