--- a/client/src/pages/Browse/Browse.css
+++ b/client/src/pages/Browse/Browse.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Bookerly";
-  src: url("../fonts/Bookerly-BoldItalic.woff2") format("woff2"),
-    url("../fonts/Bookerly-BoldItalic.woff") format("woff");
+  src: url("../../fonts/Bookerly-BoldItalic.woff2") format("woff2"),
+    url("../../fonts/Bookerly-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
